// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmSignUp renders as expected 1`] = `
[
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 36,
        },
        {
          "marginVertical": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    We Emailed You
  </Text>,
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 16,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    Your code is on the way. To log in, enter the code we emailed to a***@e***.com. It may take a minute to arrive.
  </Text>,
  <View
    style={
      {
        "paddingBottom": 8,
      }
    }
  />,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderRadius": 4,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "margin": 12,
        },
      ]
    }
    testID="amplify__button"
  >
    <Text
      style={
        [
          {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Confirm
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Resend Code
    </Text>
  </View>,
]
`;

exports[`ConfirmSignUp renders as expected when isPending is true 1`] = `
[
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 36,
        },
        {
          "marginVertical": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    We Emailed You
  </Text>,
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 16,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    Your code is on the way. To log in, enter the code we emailed to a***@e***.com. It may take a minute to arrive.
  </Text>,
  <View
    style={
      {
        "paddingBottom": 8,
      }
    }
  />,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderRadius": 4,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "margin": 12,
        },
      ]
    }
    testID="amplify__button"
  >
    <Text
      style={
        [
          {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Confirming
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Resend Code
    </Text>
  </View>,
]
`;

exports[`ConfirmSignUp renders as expected with an error 1`] = `
[
  <Text
    accessibilityRole="header"
    style={
      [
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 36,
        },
        {
          "marginVertical": 12,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    We Emailed You
  </Text>,
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {
          "fontSize": 16,
          "paddingHorizontal": 12,
        },
      ]
    }
  >
    Your code is on the way. To log in, enter the code we emailed to a***@e***.com. It may take a minute to arrive.
  </Text>,
  <View
    style={
      {
        "paddingBottom": 8,
      }
    }
  />,
  <View
    accessibilityRole="alert"
    accessible={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "hsl(0, 75%, 95%)",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 12,
        },
        {
          "marginHorizontal": 12,
        },
      ]
    }
    testID="amplify__error-message"
  >
    <Image
      accessibilityRole="image"
      accessible={true}
      source={
        {
          "testUri": "../../../packages/react-native/src/assets/icons/error.png",
        }
      }
      style={
        [
          {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          [
            {
              "margin": 8,
              "tintColor": "hsl(0, 100%, 20%)",
            },
            {},
          ],
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "hsl(0, 100%, 20%)",
            "flex": 1,
            "fontSize": 16,
            "paddingHorizontal": 8,
          },
          {},
        ]
      }
    >
      An error!
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "hsl(190, 95%, 30%)",
          "borderRadius": 4,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "margin": 12,
        },
      ]
    }
    testID="amplify__button"
  >
    <Text
      style={
        [
          {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Confirm
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 4,
          "borderWidth": 1,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        {
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          {},
        ]
      }
    >
      Resend Code
    </Text>
  </View>,
]
`;
